# click-cutter

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py  venv.bat
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/: __init__.py  cli.py  version.py
{{cookiecutter.project_name}}/{{cookiecutter.package_name}}/{{cookiecutter.cli_name}}/: __init__.py  {{cookiecutter.cli_name}}.py
